# openapi.json
@@ -1063,6 +1063,9 @@
                                     },
                                     "is_default": {
                                         "type": "boolean"
+                                    },
+                                    "is_active": {
+                                        "type": "boolean"
                                     }
                                 },
                                 "type": "object"
@@ -1159,6 +1162,9 @@
                                         "type": "string"
                                     },
                                     "is_default": {
+                                        "type": "boolean"
+                                    },
+                                    "is_active": {
                                         "type": "boolean"
                                     }
                                 },
@@ -1385,6 +1391,9 @@
                         "type": "string"
                     },
                     "is_default": {
+                        "type": "boolean"
+                    },
+                    "is_active": {
                         "type": "boolean"
                     }
                 },
